@@ -26,7 +26,7 @@
 
 #include "_libdwarf.h"
 
-ELFTC_VCSID("$Id: libdwarf_sections.c 2379 2012-01-05 02:08:20Z jkoshy $");
+ELFTC_VCSID("$Id: libdwarf_sections.c 3041 2014-05-18 15:11:03Z kaiwang27 $");
 
 #define	_SECTION_INIT_SIZE	128
 
@@ -212,13 +212,34 @@ _dwarf_find_section(Dwarf_Debug dbg, const char *name)
 	Dwarf_Section *ds;
 	Dwarf_Half i;
 
-	assert(name != NULL);
+	assert(dbg != NULL && name != NULL);
 
 	for (i = 0; i < dbg->dbg_seccnt; i++) {
 		ds = &dbg->dbg_section[i];
 		if (ds->ds_name != NULL && !strcmp(ds->ds_name, name))
 			return (ds);
 	}
+
+	return (NULL);
+}
+
+Dwarf_Section *
+_dwarf_find_next_types_section(Dwarf_Debug dbg, Dwarf_Section *ds)
+{
+
+	assert(dbg != NULL);
+
+	if (ds == NULL)
+		return (_dwarf_find_section(dbg, ".debug_types"));
+
+	assert(ds->ds_name != NULL);
+
+	do {
+		ds++;
+		if (ds->ds_name != NULL &&
+		    !strcmp(ds->ds_name, ".debug_types"))
+			return (ds);
+	} while (ds->ds_name != NULL);
 
 	return (NULL);
 }
