@@ -1,3 +1,8 @@
+Sun May 25 15:48:09 UTC 2014  John Tytgat  <John.Tytgat@aaug.net>
+
+	* upstream-trunk: Sync'd with
+	https://svn.code.sf.net/p/elftoolchain/code/trunk@r3042
+
 Fri May  9 22:48:04 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>
 
 	* current-trunk: Merged from upstream-trunk.
